--- a/src/html/hotelForm.html
+++ b/src/html/hotelForm.html
@@ -112,9 +112,14 @@
                 <label for="order-@currentPassNmb-country" class="menu-title">
                     {{locale("NATIONALITY")}}
                 </label>
-                <div class="control-field" @click=handleClick>
-                    <input type="text" name='nationality' id="order-@currentPassNmb-country" class="typeahead-selectpicker galileo-country-select" v-model="hotel.nationality">
-                    <input type="hidden" name="countryFrom@(currentPassNmb)" class="nationality" value="">
+                <div class="control-field">
+                    <div class="select_box">
+                        <div class="value_tag">
+                            <input type="text" name='nationality' id="order-@currentPassNmb-country" class="typeahead-selectpicker galileo-country-select">
+                            <input class="input_val" type="hidden" name="NationalityCode"  v-model="hotel.nationalityCode">
+                            <input class="input_val" type="hidden" name="NationalityName"  v-model="hotel.nationalityName">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="error-box">
