--- a/src/html/hotelForm.html
+++ b/src/html/hotelForm.html
@@ -115,7 +115,7 @@
                 <div class="control-field">
                     <div class="select_box">
                         <div class="value_tag">
-                            <input type="text" name='nationality' id="order-@currentPassNmb-country" class="typeahead-selectpicker galileo-country-select">
+                            <input type="text" name='nationality' id="order-@currentPassNmb-country" class="typeahead-selectpicker galileo-country-select" v-model="hotel.nationalityName">
                             <input class="input_val" type="hidden" name="NationalityCode"  v-model="hotel.nationalityCode">
                             <input class="input_val" type="hidden" name="NationalityName"  v-model="hotel.nationalityName">
                         </div>
