--- a/src/html/hotelForm.html
+++ b/src/html/hotelForm.html
@@ -45,12 +45,12 @@
                 <span class="link-right"></span>
             </label>
             <div class="control-field">
-                <div class="select_box"  @click="toggleClass">
+                <div class="select_box"  v-on:click="toggleClass">
                     <div class="value_tag">
                         <span class="number_val">{{hotel.adults}}</span>
                         <input class="input_val" type="hidden" name="Adults" v-model="hotel.adults">
                     </div>
-                    <ul class="option_box" @click="fieldOption">
+                    <ul class="option_box" v-on:click="fieldOption">
                         <li class="option" v-for="i in 4">{{ i }}</li>
                     </ul>
                 </div>
@@ -63,21 +63,21 @@
                 <span class="link-right"></span>
             </label>
             <div class="control-field">
-                <div class="select_box" @click="toggleClass">
+                <div class="select_box" v-on:click="toggleClass">
                     <div class="value_tag">
                         <span class="quantity_val">&mdash;</span>
                         <input class="input_quantity" type="hidden" v-model="hotel.inputChilds" name="Child">
                     </div>
-                    <div class="children_box option_box" @click="stopClick">
+                    <div class="children_box option_box" v-on:click="stopClick">
                         <div class="children_box-item" v-for="n in 3">
                             <label class="children-title">
                                 Age of {{ n }} child
                             </label>
-                            <div class="children_input" @click="toggleClassChild">
-                                <span class="number_val" :child="n">&mdash;</span>
+                            <div class="children_input" v-on:click="toggleClassChild">
+                                <span class="number_val" v-bind:child="n">&mdash;</span>
                                 <input class="input_val" type="hidden"  value="">
                             </div>
-                            <ul class="children_age" @click="childOption">
+                            <ul class="children_age" v-on:click="childOption">
                                 <li class="option" v-for="i in 12">{{ i }} year</li>
                             </ul>
                         </div>
@@ -96,12 +96,12 @@
                 <span class="link-right"></span>
             </label>
             <div class="control-field">
-                <div class="select_box" @click="toggleClass">
+                <div class="select_box" v-on:click="toggleClass">
                     <div class="value_tag">
                         <span class="number_val">{{hotel.rooms}}</span>
                         <input class="input_val" type="hidden" name="Rooms" v-model="hotel.rooms">
                     </div>
-                    <ul class="option_box" @click="fieldRoom">
+                    <ul class="option_box" v-on:click="fieldRoom">
                         <li class="option" v-for="i in 3">{{ i }}</li>
                     </ul>
                 </div>
@@ -120,10 +120,8 @@
                             <input class="input_val" type="hidden" name="NationalityName"  v-model="hotel.nationalityName">
                         </div>
                     </div>
+                    <div class="error-box"></div>
                 </div>
-            </div>
-            <div class="error-box">
-                <span class="close hidden"></span>
             </div>
         </div>
         <div class="field find">
@@ -131,7 +129,7 @@
         </div>
         <div class="field clear ">
             <div class="transp">
-                <span href="#" class="clear_form" @click="clearHotelForm()">
+                <span href="#" class="clear_form" v-on:click="clearHotelForm()">
                     <span data-local="true" data-localtext="CLEAR_ALL">{{locale("CLEAR_ALL")}}</span>
                 </span>
             </div>
