--- a/src/html/hotelForm.html
+++ b/src/html/hotelForm.html
@@ -120,6 +120,7 @@
                             <input class="input_val" type="hidden" name="NationalityName"  v-model="hotel.nationalityName">
                         </div>
                     </div>
+                    <span href="#" class="delete" v-bind:class="{'no-visiblity': hotel.nationalityCode==null}" v-on:click="clearNationality()"></span>
                     <div class="error-box"></div>
                 </div>
             </div>
