--- a/src/html/hotelForm.html
+++ b/src/html/hotelForm.html
@@ -42,7 +42,7 @@
                 {{locale("GUESTS")}}
             </label>
             <div class="control-field">
-                <div class="arrow"></div>
+                <div class="arrow_field"></div>
                 <div class="guest_result">
                     {{ hotel.adults }} взрослых, {{ hotel.quantityChilds }} детей, {{ hotel.rooms }} комнат
                 </div>
@@ -80,48 +80,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
-
-        <!--<div class="field num_children">-->
-            <!--<label class="menu-title">-->
-                <!--<span class="link-left"></span>-->
-                <!--{{locale("PASS_CAT_CNN")}}-->
-                <!--<span class="link-right"></span>-->
-            <!--</label>-->
-            <!--<div class="control-field">-->
-                <!--<div class="select_box" v-on:click="toggleClass">-->
-                    <!--<div class="value_tag">-->
-                        <!--<span class="quantity_val">&mdash;</span>-->
-                        <!--<input class="input_quantity" type="hidden" v-model="hotel.inputChilds" name="Child">-->
-                    <!--</div>-->
-                    <!--<div class="children_box option_box" v-on:click="stopClick">-->
-                        <!--<div class="children_box-item" v-for="n in 3">-->
-                            <!--<label class="children-title">-->
-                                <!--Age of {{ n }} child-->
-                            <!--</label>-->
-                            <!--<div class="children_input" v-on:click="toggleClassChild">-->
-                                <!--<span class="number_val" v-bind:child="n">&mdash;</span>-->
-                                <!--<input class="input_val" type="hidden"  value="">-->
-                            <!--</div>-->
-                            <!--<ul class="children_age" v-on:click="childOption">-->
-                                <!--<li class="option" v-for="i in 12">{{ i }} year</li>-->
-                            <!--</ul>-->
-                        <!--</div>-->
-
-                        <!--<span class="button-hide hidden-xs">-->
-                            <!--<span class="hide-inner">{{locale("HIDE")}}</span>-->
-                        <!--</span>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-
         <div class="field find">
             <button type="submit" class="search" data-local="true" data-localtext="FIND">{{locale("FIND")}}</button>
         </div>
